fix: deprecated instance creation